--- a/css/counter.css
+++ b/css/counter.css
@@ -3,7 +3,7 @@ body{
 }
 .frm{
 	text-align:center;
-    border:1px solid black;
+    /*border:1px solid black;*/
     padding:10px 150px;
     background:lightblue;
 }
